Add 'Internal Tools' category to sidebar
Added 'Internal Tools' category to the sidebar.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <li data-cat="audio">Audio</li>
       <li data-cat="education">Education</li>
       <li data-cat="automation">Automation</li>
+      <li data-cat="internal">Internal Tools</li>
     </ul>
   </aside>
 
@@ -73,3 +74,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
