Update sidebar categories in index.html
Added new categories to the sidebar for better organization.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       <li data-cat="audio">Audio</li>
       <li data-cat="education">Education</li>
       <li data-cat="automation">Automation</li>
-      <li data-cat="internal">Internal Tools</li>
+      <li data-cat="search">Search</li>
+      <li data-cat="seo">SEO</li>
+      <li data-cat="design">Design</li>
     </ul>
   </aside>
 
@@ -74,4 +76,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
