Revise hero text and search input placeholder
Updated hero section text and search placeholder.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>AI Tools Hub</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -17,12 +17,11 @@
 <!-- HERO -->
 <section class="hero">
   <h1>
-    Discover the <span>Best Free AI Tools</span><br>
+    Discover the <span>Best Free AI Tools</span><br />
     in One Place
   </h1>
   <p>
-    Discover and use the best free AI tools — curated for creators,
-    developers, and innovators.
+    Explore curated AI tools for students, developers, creators, and professionals.
   </p>
 
   <div class="search-wrapper">
@@ -30,8 +29,8 @@
     <input
       type="text"
       id="searchInput"
-      placeholder="Search AI tools (chat, image, video, code...)"
-    >
+      placeholder="Search AI tools (chat, image, seo, education...)"
+    />
   </div>
 </section>
 
