--- a/index.html
+++ b/index.html
@@ -8,36 +8,26 @@
 </head>
 <body>
 
-<!-- NAVBAR -->
 <nav class="navbar">
   <div class="logo">⚡ AI Tools Hub</div>
   <button id="themeToggle">🌙</button>
 </nav>
 
-<!-- HERO -->
 <section class="hero">
   <h1>
-    Discover the <span>Best Free AI Tools</span><br />
+    Discover the <span>Best Free AI Tools</span><br>
     in One Place
   </h1>
-  <p>
-    Explore curated AI tools for students, developers, creators, and professionals.
-  </p>
+  <p>Curated AI tools for students, developers, and creators.</p>
 
   <div class="search-wrapper">
     <span class="search-icon">🔍</span>
-    <input
-      type="text"
-      id="searchInput"
-      placeholder="Search AI tools (chat, image, seo, education...)"
-    />
+    <input id="searchInput" type="text" placeholder="Search AI tools..." />
   </div>
 </section>
 
-<!-- APP -->
 <section class="app">
 
-  <!-- SIDEBAR -->
   <aside class="sidebar">
     <h3>Categories</h3>
     <ul id="categoryList">
@@ -57,7 +47,6 @@
     </ul>
   </aside>
 
-  <!-- MAIN -->
   <main>
     <p id="resultCount" class="result-count"></p>
     <div id="toolsContainer" class="masonry"></div>
@@ -65,7 +54,6 @@
 
 </section>
 
-<!-- FOOTER -->
 <footer class="footer">
   <p>© 2025 AI Tools Hub • Built by Soham Patil</p>
 </footer>
