--- a/index.html
+++ b/index.html
@@ -16,22 +16,12 @@
 
 <!-- HERO -->
 <section class="hero">
-  <h1>
-    Discover the <span>Best Free AI Tools</span><br>
-    in One Place
-  </h1>
-  <p>
-    Discover and use the best free AI tools — curated for creators,
-    developers, and innovators.
-  </p>
+  <h1>Discover the <span>Best Free AI Tools</span><br>in One Place</h1>
+  <p>Discover and use the best free AI tools — curated for creators and developers.</p>
 
   <div class="search-wrapper">
     <span class="search-icon">🔍</span>
-    <input
-      type="text"
-      id="searchInput"
-      placeholder="Search AI tools (chat, image, video, code...)"
-    >
+    <input id="searchInput" type="text" placeholder="Search AI tools...">
   </div>
 </section>
 
@@ -47,9 +37,6 @@
       <li data-cat="image">Image</li>
       <li data-cat="video">Video</li>
       <li data-cat="writing">Writing</li>
-      <li data-cat="code">Code</li>
-      <li data-cat="productivity">Productivity</li>
-      <li data-cat="audio">Audio</li>
       <li data-cat="education">Education</li>
       <li data-cat="automation">Automation</li>
     </ul>
@@ -63,9 +50,8 @@
 
 </section>
 
-<!-- FOOTER -->
 <footer class="footer">
-  <p>© 2025 AI Tools Hub • Built by Soham Patil</p>
+  © 2025 AI Tools Hub • Built by Soham Patil
 </footer>
 
 <button id="backToTop">↑</button>
