--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="description" content="AI Tools Hub – Discover the best free AI tools for chat, image, video, writing, code, and productivity in one place.">
   <meta charset="UTF-8">
   <title>AI Tools Hub</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,7 @@
 <!-- NAVBAR -->
 <nav class="navbar">
   <div class="logo">⚡ AI Tools Hub</div>
-  <button id="themeToggle">🌙</button>
+  <button id="themeToggle" aria-label="Toggle theme">🌙</button>
 </nav>
 
 <!-- HERO -->
@@ -27,11 +28,13 @@
 
   <div class="search-wrapper">
     <span class="search-icon">🔍</span>
-    <input
-      type="text"
-      id="searchInput"
-      placeholder="Search AI tools (chat, image, video, code...)"
-    >
+<input
+  type="text"
+  id="searchInput"
+  placeholder="Search AI tools (chat, image, video, code...)"
+  aria-label="Search AI tools"
+/>
+
   </div>
 </section>
 
@@ -68,7 +71,7 @@
   <p>© 2025 AI Tools Hub • Built by Soham Patil</p>
 </footer>
 
-<button id="backToTop">↑</button>
+<button id="backToTop" aria-label="Back to top">↑</button>
 
 <script src="script.js"></script>
 </body>
