solve dark and light mode issue

--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<noscript>
+  <p style="text-align:center">Enable JavaScript for full experience.</p>
+</noscript>
 
 <!-- NAVBAR -->
 <nav class="navbar">
   <div class="logo">⚡ AI Tools Hub</div>
-  <button id="themeToggle" aria-label="Toggle theme">🌙</button>
+ <button id="themeToggle" aria-label="Toggle theme" title="Toggle theme">
+  🌙
+</button>
+
 </nav>
 
 <!-- HERO -->
