--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       placeholder="Search AI tools (chat, image, video, code...)"
       aria-label="Search AI tools"
       autocomplete="off"
-    >
+       inputmode="search"
+      enterkeyhint="search"
+    />
   </div>
 </section>
 
